--- a/admin/models/forms/helloworld.xml
+++ b/admin/models/forms/helloworld.xml
@@ -22,6 +22,13 @@
 				default="Hello World!"
 				/>
 		<field
+				name="uid"
+				type="user"
+				label="COM_HELLOWORLD_HELLOWORLD_FIELD_UID_LABEL"
+				description="COM_HELLOWORLD_HELLOWORLD_FIELD_UID_DESC"
+				required="false"
+				/>
+		<field
 				name="catid"
 				type="category"
 				label="COM_HELLOWORLD_HELLOWORLD_FIELD_CATID_LABEL"
